2da entrega proyecto final

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="body__grid">
 
     <!-- HEADER -->
     <header id="header">
-        <!-- NAV BAR-->
+        <!-- NAV BAR -->
         <div class="container">
             <div class="row">
                 <a href="/" class="nav__logo">
@@ -41,7 +41,11 @@
         </div>
     </header>
     
+    <div><h1>La Vera Pizza</h1></div>
+
     <main class="main">
+
+
 
         <!-- PROMO DEL DÍA -->
         <section data-aos="fade-up" class="main__promo__section">
@@ -56,7 +60,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="./img/promo2.jpg" alt="" class="main__promo__section__img">
+                    <img src="./img/portada.jpg" alt="" class="main__promo__section__img">
                 </div>
             </div>
             <div class="main__promo__section__button">
@@ -73,8 +77,13 @@
 
         <!-- NOSOTROS -->
         <section data-aos="fade-up" class="main__sec__nosotros">
-            <div class="main__sec__nosotros">
-
+            <div>
+                <h2>Nosotros</h2>
+            </div>
+            <div>
+                <div>
+                    <img src="./img/inicio1.jpg" alt="">
+                </div>
             </div>
 
         </section>
