--- a/html/contacto.html
+++ b/html/contacto.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="body__grid">
 
     <!-- HEADER -->
     <header>
